# itunes-playlist-viewer

./: .gitignore  CHANGELOG.md  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.claude-plugin/: marketplace.json
.claude/skills/: adb-tv-connect.md  release.md
.claude/skills/release/: SKILL.md
.github/workflows/: build-windows.yml  ci.yml  docs-check.yml  pages.yml  release.yml
clients/: package.json  pnpm-lock.yaml
clients/apps/mobile/: .gitignore  .npmrc  README.md  app.config.ts  eas.json  jest.setup.ts  package.json  tsconfig.json
clients/apps/mobile/src/: test-utils.tsx
clients/apps/mobile/src/app/: _layout.tsx  connect.tsx  downloads.tsx  player.tsx
clients/apps/mobile/src/app/(tabs)/: _layout.tsx  index.tsx  playlists.tsx  remote.tsx  settings.tsx
clients/apps/mobile/src/app/album/: [name].tsx
clients/apps/mobile/src/app/artist/: [name].tsx
clients/apps/mobile/src/app/folder/: [pid].tsx
clients/apps/mobile/src/app/playlist/: [id].tsx
clients/apps/mobile/src/components/: Artwork.tsx  DownloadButton.tsx  ErrorBoundary.tsx  IconButton.tsx  MiniPlayer.tsx  PlaybackErrorToast.tsx  RatingStars.tsx  Screen.tsx  StateViews.tsx  TrackRow.tsx
clients/apps/mobile/src/components/__tests__/: shared-ui.test.tsx  track-row-meta.test.tsx
clients/apps/mobile/src/constants/: brand.ts
clients/apps/mobile/src/features/browse/: AlbumRow.tsx  ArtistRow.tsx  GenreChips.tsx  PlaylistRow.tsx  hooks.ts  playlistTree.ts
clients/apps/mobile/src/features/connect/: QrScanner.tsx
clients/apps/mobile/src/features/offline/: QualityPicker.tsx  format.tsx
clients/apps/mobile/src/features/playback/: radio.ts  trackMenu.ts
clients/apps/mobile/src/features/remote/: SeekBar.tsx  hooks.ts
clients/apps/mobile/src/lib/: format.test.ts
clients/apps/mobile/src/store/: connection.test.ts  player.test.ts
clients/apps/tv/: .npmrc  app.config.ts  app.plugin.js  expo-env.d.ts  jest.setup.ts  package.json  tsconfig.json
clients/apps/tv/src/__tests__/: ConnectScreen.test.tsx  pairClient.test.ts
clients/apps/tv/src/app/: _layout.tsx  connect.tsx  index.tsx  player.tsx  settings.tsx
clients/apps/tv/src/theme/: palette.ts
docs/: ux-polish-backlog.md
mobile/: README.md  app.config.ts  eas.json  package.json  pnpm-lock.yaml
mobile/src/: test-utils.tsx
mobile/src/app/: _layout.tsx  downloads.tsx
mobile/src/app/(tabs)/: _layout.tsx  index.tsx  playlists.tsx  settings.tsx
mobile/src/app/playlist/: [id].tsx
mobile/src/components/: DownloadButton.tsx
mobile/src/features/browse/: PlaylistRow.tsx  hooks.ts
mobile/src/features/browse/__tests__/: playlists.test.tsx
mobile/src/features/offline/: QualityPicker.tsx
mobile/src/features/playback/: engine.ts
mobile/src/features/playback/__tests__/: engine-offline.test.ts  engine.test.ts
mobile/src/lib/: queryPersister.ts  types.ts
mobile/src/lib/api/: client.ts
mobile/src/store/: downloads.ts  settings.ts
mobile/src/store/__tests__/: downloads.test.ts  settings.test.ts
plugins/dj-curator/: README.md
plugins/dj-curator/.claude-plugin/: plugin.json
plugins/dj-curator/skills/build-set/: SKILL.md  reference.md
plugins/dj-curator/skills/build-set/scripts/: crate-api.sh
plugins/dj-curator/skills/build-set/workspace-template/: CLAUDE.md  README.md
plugins/dj-curator/skills/init-workspace/: SKILL.md
scripts/: check-docs.mjs  gen-licenses.mjs  license-templates.mjs
site/: app.js  index.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artwork.rs  devices.rs  ffmpeg.rs  fonts.rs  lib.rs  logging.rs  main.rs  mdns.rs  models.rs  pairing.rs  proc.rs  smart.rs
src-tauri/src/analyzer/: decode.rs  features.rs  mod.rs  similarity.rs
src-tauri/src/api/: error.rs  handlers.rs  mod.rs  webplayer.html
src-tauri/src/audio/: mod.rs
src-tauri/src/cd_ripper/: encoder.rs  mod.rs  ripper.rs  toc.rs  win_cd.rs
src-tauri/src/commands/: analysis.rs  api.rs  artwork.rs  convert.rs  ffmpeg.rs  fonts.rs  library.rs  mod.rs  pairing.rs  playback.rs  playlists.rs  ripping.rs  rules.rs  smtc.rs  updater.rs
src-tauri/src/converter/: mod.rs
src-tauri/src/db/: analysis.rs  mod.rs  playlists.rs  schema.rs  stats.rs  tracks.rs
src-tauri/src/importer/: mod.rs
src-tauri/src/itunes_xml/: parser.rs  writer.rs
src-tauri/src/metadata/: cover_art.rs  disc_id.rs  mod.rs  musicbrainz.rs
src-tauri/src/organizer/: mod.rs
src-tauri/src/playlist_rules/: condition.rs  evaluator.rs  folder_tree.rs  generator.rs  mod.rs  models.rs  registry.rs  runner.rs  schema.rs  sorter.rs
src-tauri/src/smtc/: mod.rs
src-tauri/src/text_fold/: han_table.txt  mod.rs
src-tauri/src/updater/: mod.rs
src/api/: analysis.ts  convert.ts  ffmpeg.ts  fonts.ts  index.ts  library.ts  playback.ts  playlists.ts  ripper.ts  rules.ts  server.ts  system.ts
src/components/: AlbumView.tsx  AlbumsView.tsx  ColumnPicker.tsx  ConvertDialog.tsx  Cover.tsx  CoversView.tsx  DiscDetectedBanner.tsx  GenreTagInput.tsx  LicenseList.tsx  PairingApprovalDialog.tsx  PlayerBar.tsx  RightRail.tsx  RipStatusBar.tsx  SearchBar.tsx  SettingsDialog.tsx  Sidebar.tsx  SmartPlaylistEditor.tsx  Toolbar.tsx  TrackContextMenu.tsx  TrackEditor.tsx  TrackTable.tsx  TracksView.tsx  UpdateBanner.tsx
src/components/ripper/: RipDialog.tsx
src/components/rules/: RulesPanel.tsx
src/hooks/: useDiscWatcher.ts
src/lib/: disc.ts
src/store/: useStore.ts
src/types/: analysis.ts  convert.ts  edit.ts  index.ts  library.ts  playback.ts  playlist.ts  ripper.ts  rules.ts  track.ts
website/: .gitignore  .npmrc  MAINTAINING.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
website/src/content/docs/: index.mdx
website/src/content/docs/en/: index.mdx
website/src/content/docs/guide/: api-server.md  convert.md  customize.md  dj-analysis.md  import.md  install.md  mobile.md  playback.md  smart-playlists.md
website/src/content/docs/zh-tw/: index.mdx
(+35 files in other folders)
