[package]
name = "crateforge"
version = "0.3.0"
edition = "2021"

[lib]
name = "crateforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "crateforge"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.34", features = ["bundled"] }
quick-xml = "0.37"
rodio = { version = "0.20", features = ["symphonia-all"] }
url = "2"
percent-encoding = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
# HTTP client for MusicBrainz / Cover Art Archive lookup
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Manual disc-id calculation (used as fallback + for unit tests).
sha1 = "0.10"
base64 = "0.22"
# Audio file tag reader (FLAC/MP3/AAC/WAV/etc.) for file import.
lofty = "0.21"
# Audio analysis (BPM / key / energy / loudness / similarity vector).
# Pure-Rust stack so it builds on every OS with no native deps:
#   rustfft = FFT, ebur128 = EBU R128 loudness, symphonia = decode (pinned to
#   0.5 so it shares rodio's symphonia rather than pulling a second copy).
rustfft = "6"
ebur128 = "0.1"
symphonia = { version = "0.5", features = ["all"] }
tauri-plugin-clipboard-manager = "2.3.2"

# === Unix-only: MusicBrainz disc id via libdiscid (C lib comes from Nix/Brew/apt). ===
# Skipped on Windows because libdiscid isn't trivially available via the standard
# Windows toolchain. CD ripping commands return a friendly error on Windows.
[target.'cfg(unix)'.dependencies]
discid = "0.6"

# === Windows-only: System Media Transport Controls (Now Playing widget + media keys) ===
# `zip` is used to unpack the on-demand ffmpeg download (BtbN win64 build).
[target.'cfg(target_os = "windows")'.dependencies]
souvlaki = "0.8"
zip = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
