[package]
name = "crateforge"
version = "0.8.3"
edition = "2021"
license = "MIT"

[lib]
name = "crateforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "crateforge"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.34", features = ["bundled", "functions"] }
quick-xml = "0.37"
rodio = { version = "0.20", features = ["symphonia-all"] }
url = "2"
percent-encoding = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
# HTTP client for MusicBrainz / Cover Art Archive lookup
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Manual disc-id calculation (used as fallback + for unit tests).
sha1 = "0.10"
base64 = "0.22"
# Audio file tag reader (FLAC/MP3/AAC/WAV/etc.) for file import.
lofty = "0.21"
# CJK 字体ゆれ吸収 (検索・スマプレ): NFKC 正規化で全/半角・互換文字を畳む。
unicode-normalization = "0.1"
# Audio analysis (BPM / key / energy / loudness / similarity vector).
# Pure-Rust stack so it builds on every OS with no native deps:
#   rustfft = FFT, ebur128 = EBU R128 loudness, symphonia = decode (pinned to
#   0.5 so it shares rodio's symphonia rather than pulling a second copy).
rustfft = "6"
ebur128 = "0.1"
symphonia = { version = "0.5", features = ["all"] }
tauri-plugin-clipboard-manager = "2.3.2"
# システムフォント列挙 + CJK フォント管理。
fontdb = "0.23"

# 内蔵 HTTP API サーバー (AI エージェント連携用、127.0.0.1 のみで待受)。
# tauri は内部で tokio をランタイムに使うため、tauri::async_runtime 経由で
# axum::serve を spawn できる。tokio の features は明示的に拾っておく。
axum = "0.8"
tokio = { version = "1", features = ["net", "sync", "rt", "macros", "io-util", "process"] }
tower-http = { version = "0.6", features = ["fs"] }
# ServeFile を 1 リクエストに oneshot で適用する (ストリーミング配信)。tests でも使う。
tower = { version = "0.5", features = ["util"] }
local-ip-address = "0.6"
getrandom = "0.2"
qrcode = "0.14"
# API サーバーの bind で SO_REUSEADDR / SO_REUSEPORT を設定する (再起動時の
# "address in use" 回避)。既に依存ツリー (tokio 経由) にある 0.6 系に合わせる。
socket2 = { version = "0.6", features = ["all"] }
# アートワークのサーバー側リサイズ + webp/jpeg エンコード (モバイルのオフラインサムネ用)。
# default-features を切り、必要な webp(=image-webp, pure Rust) / jpeg / png のみ有効化する。
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# === OS メディアコントロール連携（全 OS 共通） ===
# Windows: SMTC (System Media Transport Controls)
# Linux:   MPRIS (via zbus – 純 Rust, libdbus 不要)
# macOS:   Now Playing Center
# use_zbus を有効にすることで C ライブラリへの依存を排除し、全 OS で pure-Rust ビルドを実現。
# （use_zbus が有効化する zbus 等の optional deps は souvlaki 側で unix target に gate
#  されているため、Windows/macOS では何も引き込まれず無害。）
# NOTE: ここは必ず無条件の [dependencies] に置くこと。`cfg(unix)` 等の target セクション
#       配下に置くと smtc モジュールが使う souvlaki が Windows でリンクされず E0432 になる。
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }

# === Unix-only: MusicBrainz disc id via libdiscid (C lib comes from Nix/Brew/apt). ===
# Skipped on Windows because libdiscid isn't trivially available via the standard
# Windows toolchain. CD ripping commands return a friendly error on Windows.
[target.'cfg(unix)'.dependencies]
discid = "0.6"

# === Windows-only: `zip` は on-demand ffmpeg ダウンロード解凍 (BtbN win64) に使用 ===
[target.'cfg(target_os = "windows")'.dependencies]
zip = "2"

[dev-dependencies]
# 内蔵 API サーバーのハンドラテスト用。
#   tempfile = ファイルベースの一時 DB (インメモリは接続ごとに別物になり、
#             ハンドラ内の Database::open と共有できないため不可)。
#   (tower は本体依存へ移動済み: ServiceExt::oneshot を tests でも使う。)
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# unwind (abort ではなく) にして、再生時のデコーダ等で起きうる依存クレートの
# panic を catch_unwind で捕捉し、アプリごと落とさず「その曲だけ失敗」に留める。
# panic フック (logging) は unwind でも発火するのでログには残る。
panic = "unwind"
strip = true
